--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "expo-blur": "~15.0.7",
     "expo-constants": "~18.0.9",
     "expo-crypto": "~15.0.7",
-    "expo-dev-client": "~6.0.12",
     "expo-document-picker": "~14.0.7",
     "expo-file-system": "~19.0.14",
     "expo-font": "~14.0.8",
@@ -48,7 +47,7 @@
     "next": "^15.3.5",
     "react": "^19.1.0",
     "react-dom": "19.1.0",
-    "react-native": "^0.81.4",
+    "react-native": "0.79.4",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-get-random-values": "~1.11.0",
