--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "base-64": "^1.0.0",
     "base64-arraybuffer": "^1.0.2",
     "buffer": "^6.0.3",
-    "eas-cli": "^16.17.4",
-    "expo": "~54.0.0",
+    "expo": "54.0.19",
     "expo-auth-session": "~7.0.8",
     "expo-blur": "~15.0.7",
     "expo-constants": "~18.0.9",
@@ -42,12 +41,12 @@
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
-    "expo-system-ui": "~6.0.7",
+    "expo-system-ui": "~6.0.8",
     "expo-web-browser": "~15.0.8",
     "next": "^15.3.5",
     "react": "^19.1.0",
     "react-dom": "19.1.0",
-    "react-native": "0.79.4",
+    "react-native": "0.81.5",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-get-random-values": "~1.11.0",
@@ -67,7 +66,6 @@
     "@types/base-64": "^1.0.2",
     "@types/node": "^24.9.1",
     "@types/react": "~19.1.10",
-    "@types/react-native": "^0.72.8",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
     "eslint-plugin-react-native": "^5.0.0",
