--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,14 +4,26 @@
     "strict": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"],
-      "@app/*": ["app/*"],
-      "~/*": ["src/*"]
+      "@/*": [
+        "./*"
+      ],
+      "@app/*": [
+        "app/*"
+      ],
+      "~/*": [
+        "src/*"
+      ]
     },
     "jsx": "react-jsx",
     "skipLibCheck": true,
     "noImplicitAny": false,
     "moduleResolution": "Bundler"
   },
-  "include": ["**/*.ts", "**/*.tsx", "types/**/*.d.ts"]
+  "include": [
+    "**/*.ts",
+    "**/*.tsx",
+    "types/**/*.d.ts",
+    ".expo/types/**/*.ts",
+    "expo-env.d.ts"
+  ]
 }
