iOS crash fix ve app.json güncellemeleri

--- a/app.json
+++ b/app.json
@@ -3,33 +3,28 @@
     "name": "Dümenden",
     "slug": "dumenden",
     "scheme": "dumenden",
-    "version": "1.2.8",
+    "version": "1.4.2",
     "orientation": "default",
     "userInterfaceStyle": "light",
-
     "icon": "./assets/images/icon.png",
-
     "splash": {
       "image": "./assets/images/splash-icon.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-
     "androidStatusBar": {
       "translucent": true,
       "backgroundColor": "#00000000",
       "barStyle": "dark-content"
     },
-
     "androidNavigationBar": {
       "backgroundColor": "#00000000",
       "barStyle": "dark-content",
       "behavior": "inset-swipe"
     },
-
     "android": {
       "package": "com.dumenden.app",
-      "versionCode": 30,
+      "versionCode": 44,
       "permissions": [
         "com.android.vending.BILLING",
         "com.google.android.gms.permission.AD_ID"
@@ -38,40 +33,71 @@
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
       },
-      "softwareKeyboardLayoutMode": "resize"
+      "softwareKeyboardLayoutMode": "resize",
+      "scheme": "dumenden",
+      "platforms": [
+        "ios",
+        "android"
+      ],
+      "intentFilters": [
+        {
+          "action": "VIEW",
+          "data": [
+            {
+              "scheme": "dumenden",
+              "host": "*",
+              "pathPattern": ".*"
+            }
+          ],
+          "category": [
+            "BROWSABLE",
+            "DEFAULT"
+          ]
+        }
+      ]
     },
-
-    "ios": {
-      "bundleIdentifier": "com.dumenden.app",
-      "buildNumber": "5",
-      "infoPlist": {
-        "NSUserTrackingUsageDescription": "Reklamları daha alakalı gösterebilmek için izleme iznine ihtiyaç duyuyoruz.",
-        "SKAdNetworkItems": [
-          { "SKAdNetworkIdentifier": "cstr6suwn9.skadnetwork" }
-        ]
+   "ios": {
+  "bundleIdentifier": "com.dumenden.app",
+  "buildNumber": "6", 
+  "infoPlist": {
+    "NSAppTransportSecurity": {
+      "NSAllowsArbitraryLoads": true
+    },
+    "NSUserTrackingUsageDescription": "Reklamları daha alakalı gösterebilmek için izleme iznine ihtiyaç duyuyoruz.",
+    "SKAdNetworkItems": [
+      {
+        "SKAdNetworkIdentifier": "cstr6suwn9.skadnetwork"
       }
-    },
-
+    ],
+    "ITSAppUsesNonExemptEncryption": false
+  }
+},
     "plugins": [
       "expo-web-browser",
       [
         "react-native-google-mobile-ads",
         {
           "androidAppId": "ca-app-pub-3837426346942059~8256189809",
-          "iosAppId": "ca-app-pub-3940256099942544~1458002511"
+          "iosAppId": "ca-app-pub-3837426346942059~3638287941"
         }
       ],
       "expo-router",
       "expo-secure-store",
       "expo-navigation-bar"
     ],
-
     "extra": {
-      "eas": { "projectId": "b5bad7ff-9465-44fe-aaad-191ac9957eb7" }
+      "eas": {
+        "projectId": "b5bad7ff-9465-44fe-aaad-191ac9957eb7"
+      }
     },
-
-    "updates": { "enabled": false },
-    "runtimeVersion": { "policy": "appVersion" },
-    "experiments": { "typedRoutes": true }
+    "updates": {
+      "enabled": false
+    },
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "experiments": {
+      "typedRoutes": true
+    }
   }
 }
