--- a/package.json
+++ b/package.json
@@ -13,17 +13,17 @@
   "dependencies": {
     "@expo-google-fonts/patrick-hand": "^0.4.0",
     "@expo/vector-icons": "^15.0.2",
-    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/datetimepicker": "8.4.4",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
-    "@supabase/supabase-js": "^2.76.0",
+    "@supabase/supabase-js": "^2.90.1",
     "babel-plugin-module-resolver": "^5.0.2",
     "base-64": "^1.0.0",
     "base64-arraybuffer": "^1.0.2",
     "buffer": "^6.0.3",
-    "expo": "54.0.21",
+    "expo": "^54.0.21",
     "expo-auth-session": "~7.0.9",
     "expo-blur": "~15.0.7",
     "expo-constants": "~18.0.9",
@@ -37,7 +37,6 @@
     "expo-image-picker": "~17.0.8",
     "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
-    "expo-navigation-bar": "~5.0.9",
     "expo-router": "~6.0.14",
     "expo-secure-store": "~15.0.7",
     "expo-splash-screen": "~31.0.10",
@@ -45,10 +44,11 @@
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.8",
     "expo-web-browser": "~15.0.9",
+    "lucide-react-native": "^0.562.0",
     "next": "^15.3.5",
-    "react": "^19.1.0",
+    "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-native": "0.81.5",
+    "react-native": "^0.81.5",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-get-random-values": "~1.11.0",
@@ -62,7 +62,7 @@
     "react-native-url-polyfill": "^3.0.0",
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
-    "react-native-worklets": "^0.5.1",
+    "react-native-worklets": "0.5.1",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
