--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "expo-file-system": "~19.0.14",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
+    
     "expo-image": "~3.0.8",
     "expo-image-manipulator": "~14.0.7",
     "expo-image-picker": "~17.0.8",
@@ -45,7 +46,8 @@
     "expo-system-ui": "~6.0.8",
     "expo-web-browser": "~15.0.9",
     "lucide-react-native": "^0.562.0",
-    "react": "19.1.0",
+    "next": "^15.3.5",
+    "react": "^19.2.3",
     "react-dom": "19.1.0",
     "react-native": "^0.81.5",
     "react-native-dotenv": "^3.4.11",
@@ -54,7 +56,6 @@
     "react-native-google-mobile-ads": "^15.8.3",
     "react-native-iap": "^14.3.8",
     "react-native-modal": "^14.0.0-rc.1",
-    "react-native-nitro-modules": "0.31.10",
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
@@ -62,7 +63,7 @@
     "react-native-url-polyfill": "^3.0.0",
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
-    "react-native-worklets": "0.5.1",
+    "react-native-worklets": "^0.5.1",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
