--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "expo-file-system": "~19.0.14",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
-    
     "expo-image": "~3.0.8",
     "expo-image-manipulator": "~14.0.7",
     "expo-image-picker": "~17.0.8",
@@ -56,6 +55,7 @@
     "react-native-google-mobile-ads": "^15.8.3",
     "react-native-iap": "^14.3.8",
     "react-native-modal": "^14.0.0-rc.1",
+    "react-native-nitro-modules": "^0.33.1",
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
