--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,6 +1,5 @@
 require File.join(File.dirname(`node --print "require.resolve('expo/package.json')"`), "scripts/autolinking")
 require File.join(File.dirname(`node --print "require.resolve('react-native/package.json')"`), "scripts/react_native_pods")
-
 require 'json'
 podfile_properties = JSON.parse(File.read(File.join(__dir__, 'Podfile.properties.json'))) rescue {}
 
@@ -22,7 +21,7 @@ prepare_react_native_project!
 
 target 'Dmenden' do
   use_expo_modules!
-
+  pod 'NitroModules', :path => '../node_modules/react-native-nitro-modules'
   if ENV['EXPO_USE_COMMUNITY_AUTOLINKING'] == '1'
     config_command = ['node', '-e', "process.argv=['', '', 'config'];require('@react-native-community/cli').run()"];
   else
