--- a/ios/Dmenden/Info.plist
+++ b/ios/Dmenden/Info.plist
@@ -1,3 +1,4 @@
+$content = @"
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
@@ -33,7 +34,7 @@
       </dict>
     </array>
     <key>CFBundleVersion</key>
-    <string>24</string>
+    <string>25</string>
     <key>GADApplicationIdentifier</key>
     <string>ca-app-pub-3837426346942059~3638287941</string>
     <key>GADDelayAppMeasurementInit</key>
@@ -95,3 +96,5 @@
     <false/>
   </dict>
 </plist>
+"@
+Set-Content -Path "ios/Dmenden/Info.plist" -Value $content -Encoding UTF8
