--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "base-64": "^1.0.0",
     "base64-arraybuffer": "^1.0.2",
     "buffer": "^6.0.3",
-    "expo": "^54.0.21",
+    "expo": "~54.0.32",
     "expo-auth-session": "~7.0.9",
     "expo-blur": "~15.0.7",
     "expo-constants": "~18.0.9",
@@ -37,16 +37,16 @@
     "expo-image-picker": "~17.0.8",
     "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
-    "expo-router": "~6.0.14",
+    "expo-router": "~6.0.22",
     "expo-secure-store": "~15.0.7",
-    "expo-splash-screen": "~31.0.10",
+    "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.8",
     "expo-web-browser": "~15.0.9",
     "lucide-react-native": "^0.562.0",
     "next": "^15.3.5",
-    "react": "^19.2.3",
+    "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "^0.81.5",
     "react-native-dotenv": "^3.4.11",
