--- a/package.json
+++ b/package.json
@@ -37,12 +37,14 @@
     "expo-image-picker": "~17.0.8",
     "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
+    "expo-mail-composer": "~15.0.8",
     "expo-router": "~6.0.22",
     "expo-secure-store": "~15.0.7",
     "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.8",
+    "expo-tracking-transparency": "~6.0.8",
     "expo-web-browser": "~15.0.9",
     "lucide-react-native": "^0.562.0",
     "next": "^15.3.5",
